commit for end of day
